--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="./site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
@@ -133,7 +133,7 @@
 
         <div class="discount-codes">
             <h2>Discount Codes</h2>
-            <p>Use code “<b>ELITE</b>” for KontrolFreek or GamerGrip and code “<b>ELITE</b>” for SCUF or NetDuma to save!</p>
+            <p>Use code “<b>ELITE</b>” for KontrolFreek or GamerGrip and code “<b>ELITESHOT</b>” for SCUF or NetDuma to save!</p>
         </div>
     </div>
 
